--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p class="profile__name">Жак-Ив Кусто</p>
             <button class="profile__edit-button"></button>
           </div>
-          <p class="profile__role">Исследователь океана</p>
+          <p class="profile__job">Исследователь океана</p>
         </div>
         <button class="profile__add-button"></button>
       </section>
@@ -75,9 +75,21 @@
     </main>
 
     <footer class="footer">
-      <p class="footer__copyright">&copy;&nbsp;2023 Mesto Russia</p>
+      <p class="footer__copyright">&copy;&nbsp;2023 Mesto Russia, Anna Zakharova</p>
     </footer>
   </div>
+
+  <section class="profile-edit-popup">
+    <div class="profile-edit-popup__container">
+      <button class="profile-edit-popup__close"></button>
+      <form class="profile-edit-popup__form">
+        <h2 class="profile-edit-popup__header">Редактировать профиль</h2>
+        <input class="profile-edit-popup__input" type="text" id="profile-name">
+        <input class="profile-edit-popup__input" type="text" id="profile-job">
+        <button class="profile-edit-popup__save">Сохранить</button>
+      </form>
+    </div>
+  </section>
 
   <script src="./scripts/index.js"></script>
 </body>
