--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main>
       <section class="profile">
-        <img class="profile__image" src="./images/profile-image.jpg">
+        <img class="profile__image" src="./images/profile-image.jpg" alt="Фото пользователя">
         <div class="profile__info">
           <div class="profile__header">
             <p class="profile__name">Жак-Ив Кусто</p>
@@ -30,42 +30,42 @@
 
       <section class="cards">
         <div class="card">
-          <img class="card__image" src="./images/karachaevsk.jpg" alt="">
+          <img class="card__image" src="./images/karachaevsk.jpg" alt="Старинный замок в Карачаевске">
           <div class="card__caption">
             <p class="card__name">Карачаевск</p>
             <div class="card__like-button"></div>
           </div>
         </div>
         <div class="card">
-          <img class="card__image" src="./images/elbrus.jpg" alt="">
+          <img class="card__image" src="./images/elbrus.jpg" alt="Эльбрус на закате">
           <div class="card__caption">
             <p class="card__name">Гора Эльбрус</p>
             <div class="card__like-button"></div>
           </div>
         </div>
         <div class="card">
-          <img class="card__image" src="./images/dombai.jpg" alt="">
+          <img class="card__image" src="./images/dombai.jpg" alt="Горы и лес в пасмурную погоду">
           <div class="card__caption">
             <p class="card__name">Домбай</p>
             <div class="card__like-button"></div>
           </div>
         </div>
         <div class="card">
-          <img class="card__image" src="./images/elbrus.jpg" alt="">
+          <img class="card__image" src="./images/elbrus.jpg" alt="Эльбрус на закате">
           <div class="card__caption">
             <p class="card__name">Гора Эльбрус</p>
             <div class="card__like-button"></div>
           </div>
         </div>
         <div class="card">
-          <img class="card__image" src="./images/dombai.jpg" alt="">
+          <img class="card__image" src="./images/dombai.jpg" alt="Горы и лес в пасмурную погоду">
           <div class="card__caption">
             <p class="card__name">Домбай</p>
             <div class="card__like-button"></div>
           </div>
         </div>
         <div class="card">
-          <img class="card__image" src="./images/karachaevsk.jpg" alt="">
+          <img class="card__image" src="./images/karachaevsk.jpg" alt="Старинный замок в Карачаевске">
           <div class="card__caption">
             <p class="card__name">Карачаево-Черкесия</p>
             <div class="card__like-button"></div>
