fix: fix a typo in HTML

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img class="cards__image" src="./images/elbrus.jpg" alt="Эльбрус на закате">
             <div class="cards__caption">
               <h2 class="cards__name">Гора Эльбрус</h2>
-              <button class="cards__like-button" type="button" aria-label="Нравится" class="card__like-button"></button>
+              <button class="cards__like-button" type="button" aria-label="Нравится"></button>
             </div>
           </li>
           <li class="cards__item">
