--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <template id="card">
     <li class="cards__item">
-      <img class="cards__image" src="" alt="">
+      <img class="cards__image" src="">
       <button class="cards__delete-button" type="button" aria-label="Удалить"></button>
       <div class="cards__caption">
         <h2 class="cards__name"></h2>
