feat: add popup for fullscreen images, add visibility transition for popup

--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
     </div>
   </div>
 
+  <div class="popup" id="card-image-popup">
+    <div class="popup__container">
+      <button class="popup__close" type="button" aria-label="Закрыть"></button>
+      <div class="fullscreen-mode">
+        <img class="fullscreen-mode__image"
+          src="https://images.unsplash.com/photo-1670960058964-79063a8ecc91?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80">
+        <p class="fullscreen-mode__caption"></p>
+      </div>
+    </div>
+  </div>
+
   <template id="card">
     <li class="cards__item">
       <img class="cards__image" src="">
