--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
     <div class="popup__container">
       <button class="popup__close" type="button" aria-label="Закрыть"></button>
       <div class="fullscreen-mode">
-        <img class="fullscreen-mode__image"
-          src="https://images.unsplash.com/photo-1670960058964-79063a8ecc91?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80">
+        <img class="fullscreen-mode__image" src="" alt="">
         <p class="fullscreen-mode__caption"></p>
       </div>
     </div>
