fix: set src attribute for image tags

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="popup__container">
       <button class="popup__close" type="button" aria-label="Закрыть"></button>
       <div class="fullscreen-mode">
-        <img class="fullscreen-mode__image" src="" alt="">
+        <img class="fullscreen-mode__image" src="1" alt="">
         <p class="fullscreen-mode__caption"></p>
       </div>
     </div>
@@ -74,7 +74,7 @@
 
   <template id="card">
     <li class="cards__item">
-      <img class="cards__image" src="">
+      <img class="cards__image" src="1">
       <button class="cards__delete-button" type="button" aria-label="Удалить"></button>
       <div class="cards__caption">
         <h2 class="cards__name"></h2>
