--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
   </div>
 
-  <div class="popup" id="card-image-popup">
+  <div class="popup popup_dark" id="card-image-popup">
     <div class="popup__container">
       <button class="popup__close" type="button" aria-label="Закрыть"></button>
       <div class="fullscreen-mode">
@@ -83,6 +83,7 @@
     </li>
   </template>
 
+  <script src="./scripts/cards.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 
