--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 
   <script src="./scripts/cards.js"></script>
   <script src="./scripts/validate.js"></script>
-  <script src="./scripts/index.js"></script>
+  <script src="./scripts/index.js" type="module"></script>
 </body>
+
 
 </html>
