--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
 </head>
 
@@ -17,13 +16,13 @@
 
     <main>
       <section class="profile">
-        <img class="profile__image" src="./images/profile-image.jpg" alt="Фото пользователя">
+        <img class="profile__image" src="<%=require('./images/profile-image.jpg')%>" alt="Фото пользователя">
         <div class="profile__info">
           <div class="profile__header">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <h1 class="profile__name"></h1>
             <button class="profile__edit-button" type="button" aria-label="Редактировать"></button>
           </div>
-          <p class="profile__job">Исследователь океана</p>
+          <p class="profile__job"></p>
         </div>
         <button class="profile__add-button" type="button" aria-label="Добавить"></button>
       </section>
@@ -91,7 +90,6 @@
     </li>
   </template>
 
-  <script src="./scripts/index.js" type="module"></script>
 </body>
 
 
