--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <section class="profile">
         <div class="profile__image-block">
-          <img class="profile__image" src="" alt="Фото пользователя">
+          <img class="profile__image" src="1" alt="Фото пользователя">
           <button class="profile__edit-image-button" type="button" aria-label="Редактировать">
           </button>
         </div>
